Fixed some layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,11 @@ ul {
 	display: none;
 }
 
+
+.clearfix {
+	overflow: auto;
+}
+
 /*=============================
   Search field
 ==============================*/
@@ -52,9 +57,10 @@ input[type="text"] {
   Playlist
 ==============================*/
 
-#playlist {
-	height: 100%;
+.playlistResults {
 	width: 60%;
+	text-align: left;
+	display: inline-block;
 	float: left;
 }
 
@@ -85,13 +91,10 @@ input[type="text"] {
   PlayButtons
 ==============================*/
 
-#playlist {
-	height: 100px;
-}
-
-
 .playButtonsWrapper {
 	height: 120px;
+	width: 100%;
+	margin: auto;
 }
 
 ul.playButtons {
@@ -139,17 +142,23 @@ button.play {
 
 .uploader-results {
 	width: 30%;
-	margin: auto;
-	display: flex;
-	position: relative;
+	height: 100px;
+	display: inline-block;
+	float: left;
 }
 
 #uploader {
 	color: white;
+	margin: auto;
+	height: 200px;
+	text-align: center;
 }
 
 #uploader li {
-	display: block;
+	display: inline-block;
+	margin: 10px;
+/*	width: 100%;*/
+
 }
 
 .uploader-results {
@@ -157,11 +166,14 @@ button.play {
 }
 
 .albumArt {
-	width: 200px;
+	width: 150px;
 }
 
 .soundCloudLogo {
 	display: inline-block;
+	margin: auto;
+	width: 100%;
+	text-align: center;
 }
 
 /*=============================
@@ -170,12 +182,12 @@ button.play {
 
 .icon-soundcloud {
 	font-size: 50px;
-	color: lightgrey;
+	color: rgba(255, 60, 0, 0.8);
 	transition: all 100ms;
 }
 
 .icon-soundcloud:hover {
-	color: rgba(255, 60, 0, 0.8);
+	color: lightgrey;
 }
 
 
